--- a/base/templates/base/template.html
+++ b/base/templates/base/template.html
@@ -3,14 +3,35 @@
 <html>
 <head>
 	<title>Buy Me Coffee</title>
+	<link rel="stylesheet" href="{% static 'css/main.css' %}" />
+	<script src="https://js.stripe.com/v3/"></script>
+	<script defer src="{% static 'js/checkout.js' %}"></script>
+	<script>
+		function getCookie(name) {
+			let cookieValue = null;
+			if (document.cookie && document.cookie !== '') {
+				const cookies = document.cookie.split(';');
+				for (let i = 0; i < cookies.length; i++) {
+					const cookie = cookies[i].trim();
+					// Does this cookie string begin with the name we want?
+					if (cookie.substring(0, name.length + 1) === (name + '=')) {
+						cookieValue = decodeURIComponent(cookie.substring(name.length + 1));
+						break;
+					}
+				}
+			}
+			return cookieValue;
+		}
+		const csrftoken = getCookie('csrftoken');
+	</script>
+
 
 	<style type="text/css">
-		
+				
 	</style>
 </head>
 <body>
 	{% block content %}
-
 	{% endblock content %}
 </body>
 </html>
